update index.tsx to be under root.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,10 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "",
+    "src",
+    "index.tsx",
+    "App.tsx",
+    "App.test.tsx"
   ]
 }
