Revert "update index.tsx to be under root."
This reverts commit 7e42f89c5dc15dd1a77f92abee93a742c5bd3d36.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,10 +21,6 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "",
-    "src",
-    "index.tsx",
-    "App.tsx",
-    "App.test.tsx"
+    "src"
   ]
 }
