--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "landing-web",
   "version": "0.1.0",
+  "homepage": "https://instanceai.pro/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -20,8 +21,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build && mv build/* ./docs/",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "@types/react-slick": "^0.23.13",
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.3"
   }
 }
